--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ package-mode = false
 python = "^3.11"
 fastapi = "^0.111.0"
 sqlalchemy = "^2.0.30"
+psycopg = "^3.1.19"
+httpx = "^0.27.0"
+psycopg2-binary = "^2.9.9"
 
 
 [tool.poetry.group.dev.dependencies]
